<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6640BAAB"
    android:padding="16dp"
    tools:context=".InstructionActivity">

    <TextView
        android:id="@+id/instructiontext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="1dp"
        android:fontFamily="@font/monofett"
        android:padding="1dp"
        android:shadowColor="#000000"
        android:text="INSTRUCTION"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="45sp"
        android:textStyle="normal" />


    <ImageView
        android:id="@+id/tariff_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/instructiontext"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:contentDescription="@string/tariff_image_description"
        app:srcCompat="@drawable/tariff_image" />

    <TextView
        android:id="@+id/step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tariff_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:background="@drawable/rounded_corner_background2"
        android:fontFamily="@font/montserrat"
        android:text="@string/step1"
        android:textAlignment="center"
        android:textColor="#DFF4F2"
        android:textSize="15sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/step2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/step1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corner_background2"
        android:fontFamily="@font/montserrat"
        android:text="@string/step2"
        android:textAlignment="center"
        android:textColor="#DFF4F2"
        android:textSize="15sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/step3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/step2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corner_background2"
        android:fontFamily="@font/montserrat"
        android:text="@string/step3"
        android:textAlignment="center"
        android:textColor="#DFF4F2"
        android:textSize="15sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/step4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/step3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corner_background2"
        android:fontFamily="@font/montserrat"
        android:text="@string/step4"
        android:textAlignment="center"
        android:textColor="#DFF4F2"
        android:textSize="15sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textColor="#999999"
        android:textSize="16sp"
        android:textStyle="italic" />




</RelativeLayout>
